--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -1,21 +1,25 @@
-version: 2.1
-
-orbs:
-  python: circleci/python@1.2.1
-
 jobs:
-  build-and-test:
+  build:
     executor: python/default
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - deps-{{ .Branch }}-{{ checksum "poetry.lock" }}
       - python/install-packages:
           pkg-manager: poetry
+      - save_cache:
+          key: deps-{{ .Branch }}-{{ checksum "poetry.lock" }}
+          paths:
+            - /home/circleci/.cache/pypoetry/virtualenvs
       - run:
           command: |
-            poetry run pytest --version
-          name: Test
-
+            poetry run pytest
+          name: Run Tests
+orbs:
+  python: circleci/python@1.3.2
+version: 2.1
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build
