Add parallelism and export test results to a .xml file

--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 jobs:
   build:
     executor: python/default
+    parallelism: 5
     steps:
       - checkout
       - restore_cache:
@@ -15,9 +16,13 @@ jobs:
             - /home/circleci/.cache/pypoetry/virtualenvs
       - run:
           command: |
-            poetry run pytest --cov-report term-missing --cov=<package-name-here> tests/
+            circleci tests glob "<package_name_here>/tests/test_*"
+            circleci tests split --split-by=timings --timings-type=classname
+            poetry run pytest --cov-report term-missing --cov=<package_name_here> tests/ --junitxml=test_results/pytest/results.xml
             poetry run coveralls
           name: Run Tests and Upload Coverage
+      - store_test_results:
+          path: test_results/pytest
 orbs:
   python: circleci/python@1.4.0
 workflows:
