add fixer for black to true to auto run black

--- a/stickler/.stickler.yml
+++ b/stickler/.stickler.yml
@@ -1,13 +1,13 @@
 linters:
   shellcheck:
     shell: bash
-  remarklint:
-  eslint:
   flake8:
     python: 3
     config: ./.flake8
     plugins:
       - flake8-pytest
+  black:
+    fixer: true
 
 files:
   ignore:
